--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a class="menubutton prevlevel-menubutton" id="prevlevel">&larr;</a>
       <a class="menubutton level-menubutton" id="level">Level 1</a>
       <a class="menubutton start-menubutton" id="start">Start</a>
-		<a href="http://twitter.com/reaalkhalil" target="_blank" class="twitter">@reaalkhalil</a>
+		<a href="https://www.linkedin.com/in/mathiasgs/" target="_blank" class="twitter">@MAGS</a>
 
     </div>
 
