Add level grid UI with selection and completion tracking
Replaces previous/next level buttons with a grid of selectable levels in the menu. Implements selection highlighting and marks completed levels, persisting completion state in localStorage. Updates styles for the new grid and adjusts UI logic to support the new navigation and display.

--- a/index.html
+++ b/index.html
@@ -47,9 +47,21 @@
     <div id="menu">
       <img class="robotbig" src="images/robotbig.png">
       <div id="speechbubble">beep boop</div>
-      <a class="menubutton prevlevel-menubutton" id="prevlevel">&larr;</a>
-      <a class="menubutton level-menubutton" id="level">Level 1</a>
-      <a class="menubutton start-menubutton" id="start">Start</a>
+      
+      <div id="level-grid">
+        <div class="level-item selected" data-level="1">1</div>
+        <div class="level-item" data-level="2">2</div>
+        <div class="level-item" data-level="3">3</div>
+        <div class="level-item" data-level="4">4</div>
+        <div class="level-item" data-level="5">5</div>
+        <div class="level-item" data-level="6">6</div>
+        <div class="level-item" data-level="7">7</div>
+        <div class="level-item" data-level="8">8</div>
+        <div class="level-item" data-level="9">9</div>
+        <div class="level-item" data-level="10">10</div>
+      </div>
+      
+      <a class="menubutton start-menubutton" id="start">Start Level</a>
 		<a href="https://www.linkedin.com/in/mathiasgs/" target="_blank" class="twitter">@MAGS</a>
 
     </div>
