--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
 		<title>JSRobot</title>
-
+		<meta charset="UTF-8">
 
   <link rel="stylesheet" href="codemirror/lib/codemirror.css">
   <link rel="stylesheet" href="codemirror/theme/dracula.css">
@@ -148,7 +148,9 @@ function loop(robot){
     autoCloseBrackets: true,
     autoRefresh: true,
     autofocus: true,
-    lineWrapping: true
+    lineWrapping: true,
+    inputStyle: "contenteditable",
+    specialChars: /[\u0000-\u001f\u007f-\u009f\u00ad\u061c\u200b-\u200f\u2028\u2029\ufeff]/g
   });
   editor.setOption("theme", "dracula");
 
